--- a/manifest.json
+++ b/manifest.json
@@ -7,9 +7,14 @@
     "default_icon": "icon.png"
   },
   "background": {
-    "scripts": ["background.js"]
+    "scripts": ["chromepadder.js"]
   },
   "permissions": [
-    "tabs"
+    "tabs",
+    "*://*/*",
+    "notifications"
+  ],
+  "web_accessible_resources": [
+    "icon.png"
   ]
 }
