--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,12 @@
   "name": "ChromePadder",
   "version": "0.1",
   "manifest_version": 2,
-  "description": "Provides gamepad control for the web browser.",
+  "description": "Provides gamepad and Kinect control for the web browser.",
+  "icons": {
+    "16":  "16x16.png",
+    "48":  "48x48.png",
+    "128": "128x128.png"
+  },
   "browser_action": {
     "default_icon": "icon.png"
   },
