--- a/CPNUIPlugin/CMakeLists.txt
+++ b/CPNUIPlugin/CMakeLists.txt
@@ -1,5 +1,5 @@
-#/**********************************************************\ 
-# 
+#/**********************************************************\
+#
 # Auto-generated CMakeLists.txt for the ChromePadder NUI Plugin project
 #
 #\**********************************************************/
@@ -34,23 +34,86 @@ SET( SOURCES
     ${GENERATED}
     )
 
-# This will include Win/projectDef.cmake, X11/projectDef.cmake, Mac/projectDef 
+# This will include Win/projectDef.cmake, X11/projectDef.cmake, Mac/projectDef
 # depending on the platform
 include_platform()
 
 #this will build a Chrome package
 #add_chrome_package(${PLUGIN_NAME}
-#	${FB_BIN_DIR}/${PLUGIN_NAME}/${CMAKE_CFG_INTDIR}/ 
+#	${FB_BIN_DIR}/${PLUGIN_NAME}/${CMAKE_CFG_INTDIR}/
 #	"${FB_BIN_DIR}/${PLUGIN_NAME}/${CMAKE_CFG_INTDIR}/${FBSTRING_PluginFileName}.dll"
 #	"${CMAKE_CURRENT_SOURCE_DIR}/sign/package_key.pem"
 #	${PROJECT_NAME})
 
 #this will build a XPI package using XPISigner (see http://code.google.com/p/xpisigner/ )
 # add_signed_xpi_installer(${PLUGIN_NAME}
-# 	${FB_BIN_DIR}/${PLUGIN_NAME}/${CMAKE_CFG_INTDIR}/ 
+# 	${FB_BIN_DIR}/${PLUGIN_NAME}/${CMAKE_CFG_INTDIR}/
 #   "${FB_BIN_DIR}/${PLUGIN_NAME}/${CMAKE_CFG_INTDIR}/${FBSTRING_PluginFileName}.dll"
-# 	$ENV{XPI_PATH} 
-# 	"${CMAKE_CURRENT_SOURCE_DIR}/sign/certificate.pfx" 
+# 	$ENV{XPI_PATH}
+# 	"${CMAKE_CURRENT_SOURCE_DIR}/sign/certificate.pfx"
 # 	"${CMAKE_CURRENT_SOURCE_DIR}/sign/passphrase.txt"
 # 	${PROJECT_NAME})
 
+###############################################################################
+# Find OpenNI
+#
+# This sets the following variables:
+# OPENNI_FOUND - True if OPENNI was found.
+# OPENNI_INCLUDE_DIRS - Directories containing the OPENNI include files.
+# OPENNI_LIBRARIES - Libraries needed to use OPENNI.
+# OPENNI_DEFINITIONS - Compiler flags for OPENNI.
+
+find_package(PkgConfig)
+if(${CMAKE_VERSION} VERSION_LESS 2.8.2)
+  pkg_check_modules(PC_OPENNI openni-dev)
+else()
+  pkg_check_modules(PC_OPENNI QUIET openni-dev)
+endif()
+
+set(OPENNI_DEFINITIONS ${PC_OPENNI_CFLAGS_OTHER})
+
+#add a hint so that it can find it without the pkg-config
+find_path(OPENNI_INCLUDE_DIR XnStatus.h
+          HINTS ${NESTK_ROOT_DIRS_HINTS} ${PC_OPENNI_INCLUDEDIR} ${PC_OPENNI_INCLUDE_DIRS} /usr/include/openni /usr/include/ni
+          PATHS "$ENV{PROGRAMFILES}/OpenNI/Include" "$ENV{PROGRAMW6432}/OpenNI/Include"
+          PATH_SUFFIXES openni)
+#add a hint so that it can find it without the pkg-config
+find_library(OPENNI_LIBRARY
+             NAMES OpenNI64 OpenNI
+             HINTS ${NESTK_ROOT_DIRS_HINTS} ${PC_OPENNI_LIBDIR} ${PC_OPENNI_LIBRARY_DIRS} /usr/lib
+             PATHS "$ENV{PROGRAMFILES}/OpenNI/Lib${OPENNI_SUFFIX}" "$ENV{PROGRAMW6432}/OpenNI/Lib${OPENNI_SUFFIX}"
+             PATH_SUFFIXES lib
+)
+find_library(NITE_LIBRARY
+             NAMES XnVNite XnVNITE_1_3_1 XnVNITE_1_4_0 XnVNite_1_4_2 XnVNite_1_5_2
+             HINTS ${NESTK_ROOT_DIRS_HINTS} ${PC_OPENNI_LIBDIR} ${PC_OPENNI_LIBRARY_DIRS} /usr/lib
+             PATHS "$ENV{PROGRAMFILES}/PrimeSense/NITE/Lib${OPENNI_SUFFIX}" "$ENV{PROGRAMW6432}/PrimeSense/NITE/Lib${OPENNI_SUFFIX}"
+             PATH_SUFFIXES lib
+)
+
+find_path(NITE_INCLUDE_DIR XnVSessionManager.h
+          HINTS ${NESTK_ROOT_DIRS_HINTS} ${PC_OPENNI_INCLUDEDIR} ${PC_OPENNI_INCLUDE_DIRS} /usr/include/openni /usr/include/nite
+          PATHS "$ENV{PROGRAMFILES}/PrimeSense/NITE/Include" "$ENV{PROGRAMW6432}/PrimeSense/NITE/Include"
+          PATH_SUFFIXES openni)
+
+set(OPENNI_INCLUDE_DIRS ${OPENNI_INCLUDE_DIR} ${NITE_INCLUDE_DIR})
+if(APPLE)
+  set(OPENNI_LIBRARIES ${OPENNI_LIBRARY} ${NITE_LIBRARY} usb)
+else()
+  set(OPENNI_LIBRARIES ${OPENNI_LIBRARY} ${NITE_LIBRARY})
+endif()
+
+include(FindPackageHandleStandardArgs)
+find_package_handle_standard_args(OpenNI DEFAULT_MSG
+    OPENNI_LIBRARY OPENNI_INCLUDE_DIR)
+
+mark_as_advanced(OPENNI_LIBRARY OPENNI_INCLUDE_DIR)
+if(OPENNI_FOUND)
+  include_directories(${OPENNI_INCLUDE_DIRS})
+  link_directories(${OPENNI_LIBRARY})
+  add_definitions(${OPENNI_DEFINITIONS})
+  message(STATUS "OpenNI found (include: ${OPENNI_INCLUDE_DIR}, lib: ${OPENNI_LIBRARY})")
+endif(OPENNI_FOUND)
+
+# Finally, link OpenNI in
+target_link_libraries(${PROJECT_NAME} ${OPENNI_LIBRARY})
